# maze-solver

./: README.md  graphics.py  main.py  pyproject.toml
examples/: sketchpad.py  validation.py
maze-solver/graphics/: graphics.py
maze_solver/: __main__.py
maze_solver/graphics/: __init__.py  app.py  controls.py  graphics.py  main.py  maze.py  window.py
tests/: test_maze.py
