[tool.poetry]
name = "maze-solver"
version = "0.1.0"
description = "Simple visualization of a maze solver"
authors = ["Lorenzo Drumond <drumondlorenzo@posteo.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tk = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
